--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -32,10 +32,11 @@ rules:
   no-process-exit: off
   no-undef: off
   no-unused-vars: off
+  "@typescript-eslint/naming-convention": off
   "@typescript-eslint/no-unused-vars": error
 
 overrides:
-  - files: "**/*.{ts,tsx}"
+  - files: "**/*.ts"
     extends: eslint-config-dmitmel/presets/typescript-addon
     rules:
       node/no-missing-import: off
@@ -44,14 +45,17 @@ overrides:
       no-return-assign: off
       no-void: off
       consistent-return: off
+      "@typescript-eslint/naming-convention": off
 
-  - files: "**/src/**/*.{ts,tsx}"
+  - files: "**/src/**/*.ts"
     extends: eslint-config-dmitmel/rules/typescript/with-type-checking
+    rules:
+      "@typescript-eslint/no-unnecessary-condition": off
 
   - files: "**/*.d.ts"
     rules:
       no-var: off
 
-  - files: "src/**/*.{ts,tsx}"
+  - files: "src/**/*.ts"
     parserOptions:
       project: tsconfig.json
