--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "plugin-template",
+  "name": "tadako",
   "version": "1.0.0",
-  "description": "A plugin template",
+  "description": "🤭ANITA MAX WYNN💞",
   "engines": {
-    "node": ">=18.0.0",
-    "pnpm": ">=8.0.0"
+    "node": ">=14.0.0"
   },
   "scripts": {
     "build": "replugged build plugin",
@@ -16,22 +15,26 @@
     "eslint:check": "eslint ./src",
     "prettier:fix": "prettier ./src --write",
     "eslint:fix": "eslint ./src --fix",
-    "lint": "pnpm run prettier:check && pnpm run eslint:check && pnpm run check",
+    "lint": "pnpm run prettier:check & pnpm run eslint:check & pnpm run check",
     "lint:fix": "pnpm run prettier:fix && pnpm run eslint:fix"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Ahlawat",
+  "license": "MIT",
   "devDependencies": {
-    "@types/node": "^20.6.1",
-    "@typescript-eslint/eslint-plugin": "^6.7.0",
-    "@typescript-eslint/parser": "^6.7.0",
-    "eslint": "^8.49.0",
+    "@types/node": "^18.18.6",
+    "@types/react": "^18.2.31",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
+    "eslint": "^8.52.0",
     "eslint-config-dmitmel": "github:dmitmel/eslint-config-dmitmel",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.33.2",
-    "prettier": "^3.0.3",
-    "replugged": "^4.6.2",
-    "typescript": "^5.2.2"
+    "prettier": "^2.8.8",
+    "replugged": "^4.7.4",
+    "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "discord-types": "^1.3.3"
   }
 }
